--- a/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
@@ -46,7 +46,7 @@
             <li class="fadeRight t-animated" data-t-show="27"><a href="@Url.Action("Nazar","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/nazar-thum.jpg" alt="" /> <span>Nazar</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="28"><a href="@Url.Action("Sanju","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/sanju-thum.jpg" alt="" /> <span>Sanju</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="29"><a href="@Url.Action("Stree","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/stree-thum.jpg" alt="" /> <span>Stree</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="30"><a href="@Url.Action("TheVoice","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/thevocie-thum.jpg" alt="" /> <span>The Voice</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="30"><a href="@Url.Action("TheVoice","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/thevoice-thum.jpg" alt="" /> <span>The Voice</span> </a> </li>
             <!--  <li class="fadeRight t-animated" data-t-show="10"><a href="ted.php" class="hvr-grow-shadow"><img src="images/thums/ted-thum.jpg" alt=""/> <span>Ted Talks</span> </a> </li>
 
         <li class="fadeRight t-animated" data-t-show="11"><a href="kullfi.php" class="hvr-grow-shadow"><img src="images/thums/kullfi-thum.jpg" alt=""/> <span>Kullfi</span> </a> </li>
@@ -85,6 +85,7 @@
         <ul id="yaarii" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("Yaarii","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/yaarii-thum.jpg" alt="" /> <span>Yaarii</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("yaarii-website","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/yaarii-website-thum.jpg" alt="" /> <span>Yaarii Website</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("yaarii-films","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/yaarii-film-thum.jpg" alt="" /> <span>Yaarii Film</span> </a> </li>
         </ul>
         @*<ul id="boutique" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("bql","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/boutique-thum.jpg" alt="" /> <span>Boutique Living</span> </a> </li>
@@ -97,8 +98,16 @@
         </ul>*@
         <ul id="indiabulls" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("sky","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/sky-thum.jpg" alt="" /> <span>Sky</span> </a> </li>
-         
+
         </ul>
+        <ul id="nutrela" class="horizontalScroll">
+            <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("nutrela","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ruchi-soya-thum.jpg" alt="" /> <span>Nutrela</span> </a> </li>
+        </ul>
+
+        <ul id="birlawhiteputty" class="horizontalScroll">
+            <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("birla-white-repaint-putty","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/birla-wall-putty-thum.jpg" alt="" /> <span>Birla White Repaint Putty</span> </a> </li>
+        </ul>
+
     </div>
     <div class="clear"></div>
     <ul class="work-with-clients horizontalScroll">
@@ -114,6 +123,9 @@
         <li class="usports"><a href="#" data-related="usports" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/usports.png" alt="" /></a> </li>
         <li class="one-plus"><a href="#" data-related="oneplus" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/oneplus.png" alt="" /></a> </li>
         <li class="editage"><a href="#" data-related="editage" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/editage.png" alt="" /></a> </li>
+
+        <li class="nutrela"><a href="#" data-related="nutrela" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/nutrela.png" alt="" /></a> </li>
+        <li class="birlawhiteputty"><a href="#" data-related="birlawhiteputty" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/birla-white.png" alt="" /></a> </li>
         @*<li class="dubsmash"><a href="#" data-related="dubsmash" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/dubsmash.png" alt="" /></a> </li>
         <li class="pedderjohnson"><a href="#" data-related="pedderjohnson" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/pedderjohnson.png" alt="" /></a> </li>
         <li class="yaarii"><a href="#" data-related="yaarii" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/yaarii.png" alt="" /></a> </li>*@
