--- a/Sparkt.WebApp/Content/css/hompage.css
+++ b/Sparkt.WebApp/Content/css/hompage.css
@@ -551,8 +551,8 @@
                     display: inline-block;
                     position: relative;
                     vertical-align: top;
-                    padding-bottom:6px;
-                    overflow:hidden;
+                    padding-bottom: 6px;
+                    overflow: hidden;
                 }
 
                     .squad-wrapp figure figcaption h4 span:after {
@@ -704,7 +704,7 @@
         line-height: 36px;
         font-size: 14px;
         margin: 0 0 12px 0;
-        max-width:inherit;
+        max-width: inherit;
     }
 
     .contact-wrapp .input-field label:not(.label-icon).active {
@@ -1255,8 +1255,8 @@ ul.title-navigation {
     margin-bottom: 8px;
     position: relative;
     color: #FFFFFF;
-    text-decoration:none;
-    cursor:pointer;
+    text-decoration: none;
+    cursor: pointer;
 }
 
     .title-navigation li a span {
@@ -1553,7 +1553,7 @@ ul.title-navigation {
             background-size: 100% 100%;
             transition: all ease 0.4s;
             -webkit-transition: all ease 0.4s;
-            overflow:visible;
+            overflow: visible;
         }
 
         .ring-wrapp .ring-content .ring-space {
@@ -2160,8 +2160,8 @@ span.core-lable {
             background-image: url(../images/design.png);
             background-color: #d9248a
         }
-		
-		.offering-wrapp-mobile .offering-blk span.icons.influence {
+
+        .offering-wrapp-mobile .offering-blk span.icons.influence {
             background-image: url(../images/influence.png);
             background-color: #d9248a
         }
@@ -2246,6 +2246,7 @@ span.core-lable {
 .offering-wrapp-mobile .offfering-details.design li:before {
     background-color: #d9248a;
 }
+
 .offering-wrapp-mobile .offfering-details.influence li:before {
     background-color: #d9248a;
 }
@@ -3323,66 +3324,71 @@ a.clr-o-yellow .border:before {
     align-items: center;
     justify-content: center;
 }
+
 .select-wrapper span.caret {
-font-size:0;}
+    font-size: 0;
+}
+
 .caret {
- 
     border-top: 8px solid #000;
     border-right: 8px solid transparent;
     border-bottom: 0 dotted;
     border-left: 8px solid transparent;
-
 }
+
 .squadTab ul.resp-tabs-list {
     padding: 0 26px;
 }
-.squadTab ul.resp-tabs-list > li {
-    background-color: transparent;
-    border: none;
-    margin:0 ;
-    padding:0 16px !important;
-    width:auto;
-}
-    .squadTab ul.resp-tabs-list > li span {
-        display: inline-block;
-        height: 46px;
-        line-height: 46px;
-        text-transform: uppercase;
-        font-size: 22px;
-        padding: 0 0;
-        position:relative;
-        width:100%;
-        overflow:hidden;
-        letter-spacing:1.2px;
+
+    .squadTab ul.resp-tabs-list > li {
+        background-color: transparent;
+        border: none;
+        margin: 0;
+        padding: 0 16px !important;
+        width: auto;
     }
 
-        .squadTab ul.resp-tabs-list > li span:after {
-            content: '';
-            position: absolute;
-            left: 0;
-            bottom: 0;
-            height: 3px;
+        .squadTab ul.resp-tabs-list > li span {
+            display: inline-block;
+            height: 46px;
+            line-height: 46px;
+            text-transform: uppercase;
+            font-size: 22px;
+            padding: 0 0;
+            position: relative;
             width: 100%;
-            background-image: url(../images/sparkt-border.png);
-            background-position: left center;
-            background-repeat: no-repeat;
-            background-size: 100% 100%;
-            transform: translateX(-101%);
-            -webkit-transform: translateX(-101%);
-            transition: all ease 0.4s;
+            overflow: hidden;
+            letter-spacing: 1.2px;
         }
 
-    .squadTab ul.resp-tabs-list > li.resp-tab-active span:after {
-        transform: translateX(0);
-        -webkit-transform: translateX(0);
-    }
-            
-
-            .squadTab .resp-tabs-container {
-                background: none;
+            .squadTab ul.resp-tabs-list > li span:after {
+                content: '';
+                position: absolute;
+                left: 0;
+                bottom: 0;
+                height: 3px;
+                width: 100%;
+                background-image: url(../images/sparkt-border.png);
+                background-position: left center;
+                background-repeat: no-repeat;
+                background-size: 100% 100%;
+                transform: translateX(-101%);
+                -webkit-transform: translateX(-101%);
+                transition: all ease 0.4s;
             }
+
+        .squadTab ul.resp-tabs-list > li.resp-tab-active span:after {
+            transform: translateX(0);
+            -webkit-transform: translateX(0);
+        }
+
+
+.squadTab .resp-tabs-container {
+    background: none;
+}
+
     .squadTab .resp-tabs-container .resp-tab-content {
-        border:none;
+        border: none;
         padding: 24px 0 !important;
     }
 
@@ -3459,7 +3465,7 @@ input:not([type]).validate + label, input[type=text]:not(.browser-default).valid
             font-size: 22px;
             height: 30px;
             line-height: 30px;
-            padding-bottom:26px;
+            padding-bottom: 26px;
         }
 
     .squad-wrapp {
@@ -3643,6 +3649,7 @@ input:not([type]).validate + label, input[type=text]:not(.browser-default).valid
     .culture-slider > .swiper-button-next {
         margin-top: -12px;
     }
+
     .work-tab .resp-tabs-list li {
         font-size: 16px;
         padding: 0 10px !important;
@@ -3683,6 +3690,7 @@ input:not([type]).validate + label, input[type=text]:not(.browser-default).valid
         line-height: 28px;
         margin-bottom: 0;
     }
+
     .offering-wrapp:after {
         bottom: -28% !important;
         width: 400px;
@@ -3775,7 +3783,7 @@ input:not([type]).validate + label, input[type=text]:not(.browser-default).valid
 
     .squadTab ul.resp-tabs-list > li span {
         font-size: 18px;
-        letter-spacing:0.6px;
+        letter-spacing: 0.6px;
     }
 }
 
@@ -3982,7 +3990,7 @@ input:not([type]).validate + label, input[type=text]:not(.browser-default).valid
         right: inherit !important;
         top: inherit !important;
         bottom: inherit !important;
-        text-align:left;
+        text-align: left;
     }
 
 
@@ -4308,9 +4316,10 @@ input:not([type]).validate + label, input[type=text]:not(.browser-default).valid
                 max-width: 100px;
             }
 }
+
 @media screen and (max-width:768px) {
     .squadTab ul.resp-tabs-list {
-        display:none;
+        display: none;
     }
 
     .squadTab h2.resp-accordion {
@@ -4329,42 +4338,44 @@ input:not([type]).validate + label, input[type=text]:not(.browser-default).valid
             height: 46px;
             line-height: 46px;
             display: inline-block;
-            position:relative;
-            overflow:hidden;
+            position: relative;
+            overflow: hidden;
         }
+
         .squadTab h2.resp-accordion span.resp-arrow {
             height: 0;
             line-height: normal;
             margin-top: 20px;
         }
-            
-            .squadTab h2.resp-accordion span:after {
-                content: '';
-                position: absolute;
-                left: 0;
-                bottom: 6px;
-                height: 3px;
-                width: 100%;
-                background-image: url(../images/sparkt-border.png);
-                background-position: left center;
-                background-repeat: no-repeat;
-                background-size: 100% 100%;
-                transform: translateX(-100%);
-                -webkit-transform: translateX(-100%);
-                transition: all ease 0.4s;
-            }
+
+        .squadTab h2.resp-accordion span:after {
+            content: '';
+            position: absolute;
+            left: 0;
+            bottom: 6px;
+            height: 3px;
+            width: 100%;
+            background-image: url(../images/sparkt-border.png);
+            background-position: left center;
+            background-repeat: no-repeat;
+            background-size: 100% 100%;
+            transform: translateX(-100%);
+            -webkit-transform: translateX(-100%);
+            transition: all ease 0.4s;
+        }
+
         .squadTab h2.resp-accordion span.resp-arrow:after {
             display: none;
         }
+
     .squadTab h2.resp-tab-active > span:after {
         transform: translateX(0);
         -webkit-transform: translateX(0);
     }
-
 }
 
-    @media screen and (max-width:500px) {
-        .head-title.floated {
+@media screen and (max-width:500px) {
+    .head-title.floated {
         text-align: center;
     }
 
@@ -4490,14 +4501,13 @@ input:not([type]).validate + label, input[type=text]:not(.browser-default).valid
     text-transform: none;
 }
 
-.overlay-wrapp 
-{
-    position:fixed;
-    left:0;
-    top:0;
-    width:100%;
-    height:100%;
-    z-index:9999;
-    background-color:rgba(0,0,0,0.0);
-    display:none;
+.overlay-wrapp {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background-color: rgba(0,0,0,0.0);
+    display: none;
 }
