--- a/Sparkt.WebApp/Content/css/reset.css
+++ b/Sparkt.WebApp/Content/css/reset.css
@@ -365,7 +365,7 @@ body, html {
     width: 100%;
     height: 100%;
     z-index: 99999;
-    background-color: #00182e;  
+    background-color: #00182e;
     -webkit-transition: all 1000ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
     -moz-transition: all 1000ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
     -o-transition: all 1000ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
@@ -478,6 +478,18 @@ body, html {
             border-right-color: #2d926b;
         }
 
+        .intro-nav li:nth-child(6) {
+            border-right-color: #ff533d;
+        }
+
+        .intro-nav li:nth-child(7) {
+            border-right-color: #f7c331;
+        }
+
+        .intro-nav li:nth-child(8) {
+        }
+
+
         .intro-nav li a {
             display: inline-block;
             font-size: 18px;
@@ -496,6 +508,7 @@ body, html {
 .content--intro.open-page {
     transform: translateY(-100%);
     -webkit-ransform: translateY(-100%);
+    visibility: hidden;
 }
 
 /*Scroll down animation css*/
