--- a/Sparkt.WebApp/Views/work/BirlaWhiteRepaintPutty.cshtml
+++ b/Sparkt.WebApp/Views/work/BirlaWhiteRepaintPutty.cshtml
@@ -33,7 +33,7 @@
     <div class="section">
         <div class="head-title floated ">
             <i class="title-icon"><img src="~/Content/work/images/title-icon.png" alt="" /></i>
-            <h2>Creative Experience</h2>
+            <h2>Creative Assets</h2>
         </div>
         <div class="creative-assets-wrapp">
             <div class="assets-carousel birla-putty-bg ">
