--- a/Sparkt.WebApp/Views/work/Yaariifilms.cshtml
+++ b/Sparkt.WebApp/Views/work/Yaariifilms.cshtml
@@ -50,8 +50,8 @@
                                                 </video>
                                             </div>
                                             <div class="video-item">
-                                                <video poster="http://img.youtube.com/vi/v3NuYe-zyIQ/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
-                                                    <source src="https://youtu.be/v3NuYe-zyIQ" type="video/youtube" />
+                                                <video poster="http://img.youtube.com/vi/XVPPfwQ1OsA/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                                    <source src="https://youtu.be/XVPPfwQ1OsA" type="video/youtube" />
                                                 </video>
                                             </div>
                                             <div class="video-item">
